--- a/src/app/admin/integrated/extend/extend.component.html
+++ b/src/app/admin/integrated/extend/extend.component.html
@@ -16,22 +16,22 @@
             </ng-template>
             <nz-descriptions nzLayout="vertical" [nzColumn]="2">
               <nz-descriptions-item nzTitle="SMTP 主机" i18n-nzTitle>
-                <ng-container *ngIf="values['EmailHost']; else unkown">
-                  {{ values['EmailHost'] }}
+                <ng-container *ngIf="data['EmailHost']; else unkown">
+                  {{ data['EmailHost'] }}
                 </ng-container>
               </nz-descriptions-item>
               <nz-descriptions-item nzTitle="SMTP 端口（SSL）" i18n-nzTitle>
-                <ng-container *ngIf="values['EmailPort']; else unkown">
-                  {{ values['EmailPort'] }}
+                <ng-container *ngIf="data['EmailPort']; else unkown">
+                  {{ data['EmailPort'] }}
                 </ng-container>
               </nz-descriptions-item>
               <nz-descriptions-item nzTitle="用户名" i18n-nzTitle>
-                <ng-container *ngIf="values['EmailUsername']; else unkown">
-                  {{ values['EmailUsername'] }}
+                <ng-container *ngIf="data['EmailUsername']; else unkown">
+                  {{ data['EmailUsername'] }}
                 </ng-container>
               </nz-descriptions-item>
               <nz-descriptions-item nzTitle="密码" i18n-nzTitle>
-                <ng-container *ngIf="values['EmailPassword']; else unkown">
+                <ng-container *ngIf="data['EmailPassword']; else unkown">
                   <span i18n>已设置</span>
                 </ng-container>
               </nz-descriptions-item>
@@ -59,17 +59,17 @@
 
             <nz-descriptions nzLayout="vertical" [nzColumn]="2">
               <nz-descriptions-item nzTitle="地址" i18n-nzTitle [nzSpan]="2">
-                <ng-container *ngIf="values['OpenapiUrl']; else unkown">
-                  {{ values['OpenapiUrl'] }}
+                <ng-container *ngIf="data['OpenapiUrl']; else unkown">
+                  {{ data['OpenapiUrl'] }}
                 </ng-container>
               </nz-descriptions-item>
               <nz-descriptions-item nzTitle="应用 Key" i18n-nzTitle>
-                <ng-container *ngIf="values['OpenapiKey']; else unkown">
-                  {{ values['OpenapiKey'] }}
+                <ng-container *ngIf="data['OpenapiKey']; else unkown">
+                  {{ data['OpenapiKey'] }}
                 </ng-container>
               </nz-descriptions-item>
               <nz-descriptions-item nzTitle="应用密码" i18n-nzTitle>
-                <ng-container *ngIf="values['OpenapiSecret']; else unkown">
+                <ng-container *ngIf="data['OpenapiSecret']; else unkown">
                   <span i18n>已设置</span>
                 </ng-container>
               </nz-descriptions-item>
