--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,6 +21,9 @@
           <a *nzTabLink nz-tab-link routerLink="basic">电子账号</a>
         </nz-tab>
         <nz-tab>
+          <a *nzTabLink nz-tab-link routerLink="totp">动态口令</a>
+        </nz-tab>
+        <nz-tab>
           <a *nzTabLink nz-tab-link routerLink="sms">短信</a>
         </nz-tab>
       </nz-tabset>
