--- a/src/app/login/totp/totp.component.html
+++ b/src/app/login/totp/totp.component.html
@@ -7,9 +7,9 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control [nzAutoTips]="tips.password">
+    <nz-form-control [nzAutoTips]="tips.totp">
       <nz-input-group nzPrefixIcon="lock">
-        <input type="password" nz-input formControlName="password" autocomplete="new-password" placeholder="密码" />
+        <input type="password" nz-input formControlName="code" autocomplete="new-password" placeholder="口令" />
       </nz-input-group>
     </nz-form-control>
   </nz-form-item>
