update: user reset password & user center style

--- a/src/app/login/sms/sms.component.html
+++ b/src/app/login/sms/sms.component.html
@@ -13,7 +13,7 @@
     <nz-form-control [nzAutoTips]="tips.captcha">
       <nz-row [nzGutter]="8">
         <nz-col [nzSpan]="12">
-          <input nz-input formControlName="captcha" placeholder="验证码" />
+          <input nz-input formControlName="code" placeholder="验证码" />
         </nz-col>
         <nz-col [nzSpan]="12">
           <button nz-button>获取</button>
