--- a/src/common/components/nav/profile/password/password.component.html
+++ b/src/common/components/nav/profile/password/password.component.html
@@ -1,5 +1,23 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
+    <nz-form-label nzRequired i18n> 旧密码 </nz-form-label>
+    <nz-form-control nzHasFeedback [nzAutoTips]="tips.password">
+      <nz-input-group [nzSuffix]="suffixTemplate">
+        <ng-template #suffixTemplate>
+          <i nz-icon [nzType]="oldVisible ? 'eye-invisible' : 'eye'" (click)="oldVisible = !oldVisible"></i>
+        </ng-template>
+        <input
+          [type]="oldVisible ? 'text' : 'password'"
+          nz-input
+          autocomplete="new-password"
+          formControlName="old"
+          placeholder="请输入旧密码"
+          i18n-placeholder
+        />
+      </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
     <nz-form-label nzRequired i18n> 密码 </nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.password">
       <nz-input-group [nzSuffix]="suffixTemplate">
@@ -15,7 +33,7 @@
           nz-input
           autocomplete="new-password"
           formControlName="password"
-          placeholder="Please enter password"
+          placeholder="请输入重置密码"
           i18n-placeholder
         />
       </nz-input-group>
