--- a/src/common/components/nav/profile/phone/phone.component.html
+++ b/src/common/components/nav/profile/phone/phone.component.html
@@ -1,8 +1,24 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>手机号码</nz-form-label>
-    <nz-form-control style="width: 328px">
-      <input type="text" nz-input formControlName="phone" />
+    <nz-form-control [nzAutoTips]="tips.phone">
+      <nz-input-group nzCompact>
+        <nz-select formControlName="area" style="width: 30%" nzPlaceHolder="区号">
+          <nz-option [nzLabel]="'+86 中国'" [nzValue]="'+86'"></nz-option>
+        </nz-select>
+        <input type="text" nz-input formControlName="phone" style="width: 70%" placeholder="手机号码" />
+      </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control [nzAutoTips]="tips.code">
+      <nz-row [nzGutter]="8">
+        <nz-col [nzSpan]="12">
+          <input nz-input formControlName="code" placeholder="验证码" />
+        </nz-col>
+        <nz-col [nzSpan]="12">
+          <button nz-button type="button">获取</button>
+        </nz-col>
+      </nz-row>
     </nz-form-control>
   </nz-form-item>
 </form>
